--- a/configuration.yaml
+++ b/configuration.yaml
@@ -8,6 +8,7 @@ homeassistant:
   elevation: 0
   unit_system: metric
   time_zone: Africa/Johannesburg
+  country: ZA
   name: Home
   allowlist_external_dirs: # changed from whitelist_external_dirs to allowlist_external_dirs in 0.113.0
     - /config/
