--- a/packages/3dprinter/3dprinter.yaml
+++ b/packages/3dprinter/3dprinter.yaml
@@ -7,28 +7,46 @@
 #     mjpeg_url: http://octo.heaven.za.net/webcam/?action=stream
 #     verify_ssl: false
 
-# automation:
-#   - alias: 3dprint stopped
-#     trigger:
-#       - platform: state
-#         entity_id: binary_sensor.octoprint_printing
-#         from: 'on'
-#         to: 'off'
-#     condition:
-#       - condition: numeric_state
-#         entity_id: sensor.octoprint_print_progress
-#         above: '0'
-#     action:
-#       - service: script.alert
-#         data:
-#           target: 'alerts-david'
-#           icon: ':printer:'
-#           object: '3D Printer'
-#           camera: 'camera.octoprint'
-#           message: >
-#             Printing stopped @ progress: {{ states('sensor.octoprint_print_progress') | int }} {{- '\n' -}}
-#             Time: {{ states('sensor.octoprint_print_time') }} {{- '\n' -}}
-#             File: {{ states('sensor.octoprint_print_file') }}
+automation:
+  - alias: 3dprint complete
+    trigger:
+      - platform: state
+        entity_id: sensor.3d_printer_state
+        from: 'printing'
+        to: 'complete'
+    action:
+      - service: script.alert
+        data:
+          target: 'alerts-david'
+          icon: ':printer:'
+          object: '3D Printer'
+          camera: 'camera.3d_printer_snapshot'
+          message: >
+            3d print complete {{- '\n' -}}
+            Time: {{ states('sensor.3d_printer_print_time') }} {{- '\n' -}}
+            File: {{ states('sensor.3d_printer_current_print') }}
+
+  # - alias: 3dprint stopped
+  #   trigger:
+  #     - platform: state
+  #       entity_id: binary_sensor.octoprint_printing
+  #       from: 'on'
+  #       to: 'off'
+  #   condition:
+  #     - condition: numeric_state
+  #       entity_id: sensor.octoprint_print_progress
+  #       above: '0'
+  #   action:
+  #     - service: script.alert
+  #       data:
+  #         target: 'alerts-david'
+  #         icon: ':printer:'
+  #         object: '3D Printer'
+  #         camera: 'camera.octoprint'
+  #         message: >
+  #           Printing stopped @ progress: {{ states('sensor.octoprint_print_progress') | int }} {{- '\n' -}}
+  #           Time: {{ states('sensor.octoprint_print_time') }} {{- '\n' -}}
+  #           File: {{ states('sensor.octoprint_print_file') }}
 
 #   - alias: 3dprint temp changed
 #     trigger:
