--- a/packages/energy/eskomsepush.yaml
+++ b/packages/energy/eskomsepush.yaml
@@ -24,16 +24,24 @@ sensor:
           {%else%}
           None scheduled
           {%endif%}
-      next_loadshedding_duration:
-        friendly_name: Next loadshedding duration
-        unique_id: Next_Loadshedding_Duration
-        unit_of_measurement: mins
+      loadshedding_slot_next:
+        friendly_name: Loadshedding slot next
+        unique_id: loadshedding_slot_next
         value_template: >
-            {%if state_attr('sensor.eskomsepush','events')|count > 0 %}
-            {{ (as_timestamp(states("sensor.next_loadshedding_time_end")) - as_timestamp(states("sensor.next_loadshedding_time"))) / 60 }}'
-            {%else%}
-            Unknown
-            {%endif%}
+          {%if state_attr('sensor.load_shedding_area_capetown_6_durbanville','forecast')|count > 0 %}
+          {{ as_timestamp(states['sensor.load_shedding_area_capetown_6_durbanville'].attributes.forecast[0]['start_time']) | timestamp_custom('%H:%M') }}
+          {%else%}
+          None scheduled
+          {%endif%}
+      loadshedding_slot_next_after:
+        friendly_name: Loadshedding slot next after
+        unique_id: loadshedding_slot_next_after
+        value_template: >
+          {%if state_attr('sensor.load_shedding_area_capetown_6_durbanville','forecast')|count > 1 %}
+          {{ as_timestamp(states['sensor.load_shedding_area_capetown_6_durbanville'].attributes.forecast[1]['start_time']) | timestamp_custom('%H:%M') }}
+          {%else%}
+          None scheduled
+          {%endif%}
       time_till_loadshedding:
         friendly_name: Time until next loadshedding
         unique_id: Time_Until_Next_Loadshedding
@@ -53,7 +61,7 @@ automation:
   - alias: start_loadshedding_slot_timer
     trigger:
       - platform: state
-        entity_id: calendar.load_shedding_forecast
+        entity_id: sensor.load_shedding_area_capetown_6_durbanville
         to: 'on'
     condition:
       # make sure timer not already active
