--- a/packages/energy/eskomsepush.yaml
+++ b/packages/energy/eskomsepush.yaml
@@ -14,14 +14,19 @@ sensor:
         unique_id: loadshedding_slot_forecast
         value_template: >
           {%if state_attr('sensor.load_shedding_area_capetown_6_durbanville','forecast')|count > 0 %}
-          {%- set data = namespace(count=0) -%}
+          {%- set data = namespace(count=1) -%}
           {%- for event in states['sensor.load_shedding_area_capetown_6_durbanville'].attributes.forecast -%}
-          {%- set data.count = data.count + 1 %}{% if data.count <= 4 %}{{
-          as_timestamp(event['start_time']) | timestamp_custom('%a %d %b:') }} {{
-          as_timestamp(event['start_time']) | timestamp_custom('%H:%M') }} to {{
-          as_timestamp(event['end_time']) | timestamp_custom('%H:%M') }}
-          {{- '\n' -}} {%endif%}{%- endfor -%}
-          {%else%}
+          {% if data.count <= 4 %}
+          {%- set start = as_timestamp(event['start_time']) %}
+          {%- set end = as_timestamp(event['end_time']) %}
+          {%- set startdelta = as_timestamp(event['start_time'] + timedelta(minutes=30)) %}
+          {%- if startdelta != end %}
+          {{- start | timestamp_custom('%a %d %b:') }} {{- start | timestamp_custom(' %H:%M') }} to {{- end | timestamp_custom(' %H:%M') }}
+          {{- '\n' -}}
+          {%- set data.count = data.count + 1 %}
+          {%-endif%}
+          {%-endif%}{%- endfor -%}
+          {%-else%}
           None scheduled
           {%endif%}
       loadshedding_slot_next:
@@ -72,7 +77,7 @@ automation:
       - service: timer.start
         data:
           entity_id: timer.loadshedding_slot
-          duration: "{{ (states('sensor.next_loadshedding_duration')|int + 35) * 60 }}"
+          # duration: "{{ (states('sensor.next_loadshedding_duration')|int + 35) * 60 }}"
 
   - alias: stop_loadshedding_slot_timer_grid_power_returned
     trigger:
