--- a/packages/energy/geysers.yaml
+++ b/packages/energy/geysers.yaml
@@ -219,6 +219,7 @@ automation:
                   - condition: numeric_state
                     entity_id: sensor.average_temperature_outside_last_1_day
                     below: '19.4'
+                  # IF lots of sun and high battery also turn on
                   - condition: and
                     conditions:
                       - condition: numeric_state
@@ -227,6 +228,9 @@ automation:
                       - condition: numeric_state
                         entity_id: sensor.solcast_forecast_energy_today_predicted
                         above: '26.1'
+                      - condition: numeric_state
+                        entity_id: sensor.goodwe_battery_soc
+                        above: '50'
               - condition: template
                 value_template: "{{ ('02:00' <= states('sensor.time') <= '06:00')  }}"
               - condition: template
