--- a/packages/climate/ac_automations.yaml
+++ b/packages/climate/ac_automations.yaml
@@ -35,6 +35,11 @@ automation:
         at: '11:00:00'
       - platform: time
         at: '12:00:00'
+      - platform: numeric_state
+        entity_id: sensor.goodwe_battery_soc
+        above: '99'
+        for:
+          seconds: 60
     condition:
       - condition: numeric_state
         entity_id: sensor.solcast_forecast_energy_today_predicted
@@ -67,6 +72,9 @@ automation:
               - condition: state
                 entity_id: binary_sensor.main_bedroom_window
                 state: 'off'
+              - condition: numeric_state
+                entity_id: sensor.goodwe_battery_soc
+                above: '95'
             sequence:
               - service: script.ac
                 data:
@@ -85,6 +93,9 @@ automation:
               - condition: state
                 entity_id: binary_sensor.babyroom_window
                 state: 'off'
+              - condition: numeric_state
+                entity_id: sensor.goodwe_battery_soc
+                above: '95'
             sequence:
               - service: script.ac
                 data:
