--- a/packages/energy/geysers.yaml
+++ b/packages/energy/geysers.yaml
@@ -81,7 +81,7 @@ script:
   ######################################################################
   # Example:
   ######################################################################
-  # - service: script.geyser_on_mainbedroom
+  # - service: script.front_bathroom_geyser
   #   data:
   #      N/A
   ######################################################################
@@ -126,8 +126,6 @@ automation:
         value_template: "{{ states('sensor.time') == (state_attr('input_datetime.main_geyser_on_time', 'timestamp') | int | timestamp_custom('%H:%M', False)) }}"
       - platform: time
         at: '12:45:00'
-      - platform: time
-        at: '15:00:00'
       - platform: numeric_state
         entity_id: sensor.front_bathroom_geyser_energy_power
         below: '100'
@@ -196,8 +194,17 @@ automation:
                           minutes: 120
             sequence:
               - service: script.geyser_on_mainbedroom
-          # Turn on early AM and late PM only if haven't been on in previous 6 hours
-          # Also, if average temp below 21degree
+              - alias: "Log action taken"
+                service: script.log
+                data:
+                  icon: ':zap:'
+                  object: 'Geyser - main bedroom'
+                  message: >
+                    Turning on main bedroom geyser
+                    (Turn on between 11am and 2pm for sun times)
+                    Trigger:
+                    {{ trigger }}
+          # Turn on late PM only if haven't been on in previous 6 hours
           - conditions:
               - condition: state
                 entity_id: timer.main_geyser
@@ -208,6 +215,18 @@ automation:
                 value_template: "{{ ('15:00' <= states('sensor.time') < '18:05') }}"
             sequence:
               - service: script.geyser_on_mainbedroom
+              - alias: "Log action taken"
+                service: script.log
+                data:
+                  icon: ':zap:'
+                  object: 'Geyser - main bedroom'
+                  message: >
+                    Turning on main bedroom geyser
+                    (Turn on late PM only if haven't been on in previous 6 hours)
+                    Trigger:
+                    {{ trigger }}
+          # Turn on early AM and late PM only if haven't been on in previous 6 hours
+          # Also, if average temp below 21degree
           - conditions:
               - condition: state
                 entity_id: timer.main_geyser
@@ -237,6 +256,16 @@ automation:
                 value_template: "{{ trigger.platform != 'numeric_state' }}"
             sequence:
               - service: script.geyser_on_mainbedroom
+              - alias: "Log action taken"
+                service: script.log
+                data:
+                  icon: ':zap:'
+                  object: 'Geyser - main bedroom'
+                  message: >
+                    Turning on main bedroom geyser
+                    (Turn on early AM and late PM)
+                    Trigger:
+                    {{ trigger }}
         # No conditions met so log and do nothing (exceptions to logging apply)
         # default:
         #   # - condition: template
