--- a/includes/influxdb.yaml
+++ b/includes/influxdb.yaml
@@ -22,5 +22,5 @@ exclude:
     - weather
     - sun
   entities:
-    - sensor.last_boot # Comes from 'systemmonitor' sensor platform
+    #- sensor.last_boot # Comes from 'systemmonitor' sensor platform
     - sensor.date
