add prince indicator sensors

--- a/secrets.fake.yaml
+++ b/secrets.fake.yaml
@@ -5,6 +5,8 @@
 
 EskomSePush: token
 
+AlphaVantage: api_key
+
 # ESPHome (generic)
 esphome_api_password: password
 esphome_ota_password: password
